<?xml version="1.0"?>
<package>
  <name>asr_sick_lms_400</name>
  <version>1.0.0</version>
  <description>This package is used to access the sick lms400 laser range-finder. It contains all necessary functionality to communicate with the sensor via rosmessages. </description>
  <author>Aumann Florian, Krehl Yann, Meißner Pascal</author>
  <maintainer email="asr-ros@lists.kit.edu">Meißner Pascal</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/asr_sick_lms_400</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>cmake_modules</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>cmake_modules</run_depend>

  <export>
  </export>
</package>
